# rust-example

./: Cargo.toml  README.md  data.txt
src/: main.rs
