[package]
name = "tempstudy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnet = "2.8"
iprange = "0.6"
prefix-trie = "0.2.4"
trust-dns-client = "0.21.2"
[dependencies.rocket]
features = ["json", "msgpack", "uuid"]

